css/main.css
/*-------------------------------------NORMALIZE CONTENT-------------------------------------*/

* {
  border: 0;
  height: 100vh;
  margin: 0;
  width: 100vw;
}

/*-------------------------------------ELEMENTS-------------------------------------*/

body {
  background-color: #000000;
  height: 100vh;
  transition: all 5s cubic-bezier(0, 1.14, 0.82, 1.02);
  width: 100vw;
}

body:before {
  background-image: url(https://user-images.githubusercontent.com/11747875/215290613-8f295e44-9365-45ec-8bac-848a59ba7087.png);
  background-position: center;
  background-repeat: none;
  background-size: cover;
  content: '';
  height: 100%;
  opacity: .5;
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
}

h4 {
  box-shadow: border-box;
  color: white;
  font-size: 50px;
  height: auto;
  margin: auto;
  overflow-y: hidden;
  padding-left: 10px;
  text-align: left;
  text-overflow: ellipsis;
  transition: all 1s cubic-bezier(0, 1.14, 0.82, 1.02);
  width: 572px;
  z-index: 10;
}

/*-------------------------------------CLASSES-------------------------------------*/

.background {
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  display: flex;
  font-family: courier;
  overflow-wrap: break-word;
  position: relative;
  text-shadow: 0px 0px 10px rgba(0, 225, 0, 0.9);
  transition: all 1s cubic-bezier(0, 1.14, 0.82, 1.02);
  word-wrap: break-word;
  z-index: -10;
}

.cli {
  align-content: center;
  color: white;
  display: flex;
  font-family: courier;
  font-size: 89px;
  height: fit-content;
  justify-content: center;
  text-align: center;
  text-shadow: 1px 1px 7px rgb(255 255 255 / 72%);
  width: 14%;
}

.display1 {
  display: flex;
  height: fit-content;
  font-family: courier;
  font-size: .85em;
  margin: auto;
  overflow: hidden;
  padding: 40px 40px 40px 40px;
  text-align: center;
  text-shadow: none;
  top: 22vh;
  transition: all 3s cubic-bezier(0, 1.14, 0.82, 1.02);
  width: 80%;
  z-index: 10;
}

.display::after {
  animation-name: blinker;
  animation-duration: 1s;
  animation-name: blinker;
  animation-duration: 1s;
  animation-timing-function: ease-in-ease-out;
  animation-iteration-count: 3000;
  -webkit-animation-name: blinker;
  -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-ease-out;
  -webkit-animation-iteration-count: 3000;
  content: "|";
  top: -2px;
}

/*-------------------------------------KEYFRAMES-------------------------------------*/

@-moz-keyframes blinker {

  /* Decimal not necessary, 0 and 1 is enough */
  0% {
    opacity: 1.0;
  }

  50% {
    opacity: 0.0;
  }

  100% {
    opacity: 1.0;
  }
}

@-webkit-keyframes blinker {
  0% {
    opacity: 1.0;
  }

  50% {
    opacity: 0.0;
  }

  100% {
    opacity: 1.0;
  }
}

@keyframes blinker {
  0% {
    opacity: 1.0;
  }

  50% {
    opacity: 0.0;
  }

  100% {
    opacity: 1.0;
  }
}

